# we-health-tick-app

./: .gitignore  README.md  bump.config.ts  eslint.config.js  eslint.config.ts  index.html  latest-gitee.json  package.json  panel.html  pnpm-lock.yaml  settings.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/scripts/: gitee_create_release.py  gitee_fetch_urls.py  gitee_publish_manifest.sh  gitee_rewrite_manifest.py  gitee_upload_assets.py  github_publish_manifest.sh
.github/workflows/: build-windows.yml  build.yml  release-assets.yml  release-gitee-sync.yml  release-notes.yml  release.yml  sync-gitee.yml
docs/: tasks.md  updater-signing.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  panel.rs  settings.rs  timer.rs  tray.rs
src-tauri/src/cli/: export_bindings.rs
src-tauri/src/shared/: config.rs  events.rs  i18n.rs  idle.rs  mod.rs  screen.rs  time.rs  types.rs
src-tauri/src/windows/: mod.rs  panel.rs  settings.rs
src-tauri/tests/: export_bindings.rs
src/panel/: PanelApp.css  PanelApp.tsx  main.tsx  types.ts
src/panel/components/: ActionButtons.tsx  CountdownRing.tsx  ExitButton.tsx
src/settings/: SettingsApp.tsx  main.tsx
src/settings/components/: AboutPage.tsx  PlanPage.tsx  RemindersPage.tsx  RestPage.tsx  SettingsPage.tsx
src/shared/: AppI18nProvider.tsx  AppThemeProvider.tsx  bindings.ts  commands.ts  config.ts  events.ts  settingOption.ts  useConfigValue.ts  useSystemLanguage.ts  useSystemTheme.ts
src/shared/i18n/: index.ts
src/shared/i18n/locales/en/: about.json  common.json  panel.json  plan.json  reminders.json  rest.json  settings.json
src/shared/i18n/locales/zh-CN/: about.json  panel.json  plan.json  reminders.json  rest.json  settings.json
src/windows/panel/: PanelApp.tsx  index.css  main.tsx  phaseColors.ts
src/windows/panel/components/: AlertingView.tsx  BreakingView.tsx  CountdownRing.tsx  FooterActions.tsx  PausedView.tsx  WaitingView.tsx  WorkingView.tsx
src/windows/panel/hooks/: useTimer.ts  useTimerState.ts
src/windows/settings/: SettingsApp.tsx
src/windows/settings/components/: AboutPage.tsx  PlanPage.tsx  RemindersPage.tsx  RestPage.tsx  SettingsPage.tsx
