[package]
name = "we-health-tick"
version = "1.0.0"
description = "We Health Tick Desktop App"
authors = ["oceangao"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "we_health_tick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Pin：specta + tauri-specta 必须锁定到同一 rc 系列；rc 之间 API 不稳定，relax 到范围依赖会导致编译失败。
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api", "image-png", "specta"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
