[package]
name = "we-health-tick"
version = "0.1.17"
description = "We Health Tick Desktop App"
authors = ["oceangao"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"
# 多 binary 项目（we-health-tick 主 app + export_bindings 绑定生成器）必须指定默认运行目标，
# 否则 `cargo run`（tauri dev 底层调用，不带 --bin）会因目标歧义报错：
#   error: `cargo run` could not determine which binary to run
# gen:bindings 脚本显式 --bin export_bindings 不受此设置影响。
default-run = "we-health-tick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "we_health_tick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# export_bindings：tauri-specta 绑定生成器。
# path 放在 src/cli/ 而非 cargo 默认的 src/bin/ —— Tauri 2.x bundler 的 Stage 2 会无脑扫描
# src/bin/（tauri#15325），把扫到的 .rs 当作 bundle binary 找产物导致 tauri build 失败。
# src/cli/ 不在扫描范围，绕开 bug；产物落在 target/<profile>/ 根，与 WebView2Loader.dll 同目录，
# Windows 上也不需要 DLL 复制 hack。
[[bin]]
name = "export_bindings"
path = "src/cli/export_bindings.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Pin：specta + tauri-specta 必须锁定到同一 rc 系列；rc 之间 API 不稳定，relax 到范围依赖会导致编译失败。
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api", "image-png", "specta"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
