[package]
name = "we-health-tick"
version = "0.1.19"
description = "We Health Tick Desktop App"
authors = ["oceangao"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"
# 多 binary 项目（we-health-tick 主 app + export_bindings 绑定生成器）必须指定默认运行目标，
# 否则 `cargo run`（tauri dev 底层调用，不带 --bin）会因目标歧义报错：
#   error: `cargo run` could not determine which binary to run
# gen:bindings 脚本显式 --bin export_bindings 不受此设置影响。
default-run = "we-health-tick"

# gen-bindings：export_bindings 的门控 feature。
# tauri build 不启用此 feature → bundler 阶段 1 按 required-features 过滤掉 export_bindings
# (tauri-cli get_binaries 源码 937-961 行)，不会尝试打包它；cargo 也不编译。
# pnpm gen:bindings 显式 --features gen-bindings 才会编译运行。
[features]
gen-bindings = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "we_health_tick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# export_bindings：tauri-specta 绑定生成器。
# 双重门控绕过 tauri#15325 的 bundler 枚举问题（tauri-cli get_binaries 第 937-1002 行）：
#   1. path 放 src/cli/：bundler 阶段 2 只扫描 src/bin/（硬编码），扫不到这里
#   2. required-features = ["gen-bindings"]：bundler 阶段 1 检查 required-features，
#      tauri build 不启用此 feature → 直接跳过；cargo 也不编译，产物不存在也不会被找
# 仅 pnpm gen:bindings（--features gen-bindings）才会编译运行。
# 产物落在 target/<profile>/ 根，与 WebView2Loader.dll 同目录，Windows 也不需要 DLL 复制 hack。
[[bin]]
name = "export_bindings"
path = "src/cli/export_bindings.rs"
required-features = ["gen-bindings"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Pin：specta + tauri-specta 必须锁定到同一 rc 系列；rc 之间 API 不稳定，relax 到范围依赖会导致编译失败。
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api", "image-png", "specta"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
